--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>梅田スタバ多すぎ問題</title>
+
+<!-- ヘッダに Leaflet の CSS と JS を追加 -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
 </head>
+
 <body>
   <h1>梅田スタバ多すぎ問題</h1>
   <p>GitHub Pages デビューおめでとう🎉</p>
