--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 <body>
   <h1>梅田スタバ多すぎ問題</h1>
   <p>GitHub Pages デビューおめでとう🎉</p>
+
+  <div id="map" style="height:70vh;"></div>
+<script src="script.js"></script>
+
 </body>
 </html>
